[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Images/Boy/upperBody.png" type="Texture" id=1]
[ext_resource path="res://Levels/ParteNgKatawanNgTao/Boi/upperBody/upperBody.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 262.931
height = 126.584

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.999997, 0 )
scale = Vector2( 0.191729, 0.185365 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="Sprite"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 3.06923, -1.05572 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_exited"]
